[gd_scene load_steps=22 format=3 uid="uid://cat12w8nvcmim"]

[ext_resource type="Script" path="res://Levels/GuitarHero/StateManager.gd" id="1_dkjhl"]
[ext_resource type="Texture2D" uid="uid://rnepadpt3m54" path="res://Assets/Tileset/Tileset.png" id="2_bnid3"]
[ext_resource type="Texture2D" uid="uid://b5vbhsfmc6h7b" path="res://Assets/Mechanics/Father.png" id="2_r4flr"]
[ext_resource type="Texture2D" uid="uid://bl361uenlp15g" path="res://Assets/Enemys/Yam_Sheet.png" id="5_gh8rj"]
[ext_resource type="PackedScene" uid="uid://b11hooauu7282" path="res://Nodes/Player/Player.tscn" id="5_n5yia"]
[ext_resource type="Script" path="res://Levels/GuitarHero/GuitarHeroPlayer.gd" id="6_ecoko"]
[ext_resource type="Texture2D" uid="uid://u1xk7eglcfok" path="res://Assets/Environment/Line.png" id="6_msk2n"]
[ext_resource type="FontFile" uid="uid://m0chc754s7es" path="res://Assets/Bitfantasy.ttf" id="7_7dcin"]
[ext_resource type="Texture2D" uid="uid://bpswbbcl0us3q" path="res://Assets/Environment/Microphone.png" id="9_h4ayj"]
[ext_resource type="Texture2D" uid="uid://dmudurp3xt5d3" path="res://Assets/Environment/Guitar.png" id="10_4l8db"]
[ext_resource type="Texture2D" uid="uid://ctofbmn51lpss" path="res://Assets/Mechanics/Heart.png" id="13_yewnw"]
[ext_resource type="PackedScene" uid="uid://65s80w7ritgt" path="res://Nodes/Mechanics/GuitarHeroButtons.tscn" id="15_i6rfy"]
[ext_resource type="Texture2D" uid="uid://crx1uuh2rdfnr" path="res://Assets/Environment/Light.png" id="15_nuuwx"]
[ext_resource type="Texture2D" uid="uid://dh351jrw3bjr1" path="res://Assets/Environment/Evil_Cloud.png" id="16_c14sj"]
[ext_resource type="Texture2D" uid="uid://b8fahc0bwriju" path="res://Assets/Mechanics/Rope.png" id="17_v3jon"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h8lsw"]
texture = ExtResource("2_bnid3")
texture_region_size = Vector2i(32, 32)
2:0/0 = 0
1:0/0 = 0
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:1/0 = 0
3:1/0 = 0
3:0/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_hnt7y"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_h8lsw")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvhth"]
size = Vector2(1152, 16)

[sub_resource type="LabelSettings" id="LabelSettings_gsd82"]
font = ExtResource("7_7dcin")
font_size = 102
font_color = Color(0.772549, 0.411765, 0.505882, 1)
outline_color = Color(0.156863, 0.137255, 0.156863, 1)
shadow_color = Color(0, 0, 0, 0.482353)
shadow_offset = Vector2(3, 1)

[sub_resource type="Animation" id="Animation_c4r63"]
resource_name = "Beat"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hys1v"]
_data = {
"Beat": SubResource("Animation_c4r63")
}

[node name="GuitarHero" type="Node2D"]
script = ExtResource("1_dkjhl")

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_left = -384.0
offset_top = -8.0
offset_right = 1536.0
offset_bottom = 648.0
color = Color(0.156863, 0.137255, 0.156863, 1)

[node name="Father" type="Sprite2D" parent="Background"]
modulate = Color(1, 1, 1, 0.431373)
position = Vector2(576, 343)
scale = Vector2(1.6, 1.6)
texture = ExtResource("2_r4flr")

[node name="TileMap" type="TileMap" parent="Background"]
position = Vector2(6.10352e-05, 3.05176e-05)
tile_set = SubResource("TileSet_hnt7y")
format = 2
layer_0/tile_data = PackedInt32Array(786452, 65536, 1, 851988, 65536, 1, 917524, 65536, 1, 983060, 65536, 2, 786453, 65536, 1, 851989, 65536, 1, 917525, 196608, 0, 983061, 65536, 2, 786454, 196608, 1, 851990, 196608, 0, 917526, 65536, 1, 983062, 65536, 2, 786455, 65536, 1, 851991, 65536, 1, 917527, 65536, 1, 983063, 65536, 2, 786456, 65536, 1, 851992, 65536, 1, 917528, 65536, 1, 983064, 65536, 2, 786457, 65536, 1, 851993, 65536, 1, 917529, 65536, 1, 983065, 65536, 2, 786458, 65536, 1, 851994, 65536, 1, 917530, 65536, 1, 983066, 65536, 2, 786459, 65536, 1, 851995, 196608, 1, 917531, 65536, 1, 983067, 65536, 2, 786460, 65536, 1, 851996, 65536, 1, 917532, 65536, 1, 983068, 65536, 2, 786461, 65536, 1, 851997, 65536, 1, 917533, 196608, 0, 983069, 65536, 2, 786462, 196608, 0, 851998, 65536, 1, 917534, 65536, 1, 983070, 65536, 2, 786463, 65536, 1, 851999, 65536, 1, 917535, 65536, 1, 983071, 65536, 2, 786464, 65536, 1, 852000, 196608, 0, 917536, 65536, 1, 983072, 65536, 2, 786465, 196608, 1, 852001, 65536, 1, 917537, 65536, 1, 983073, 65536, 2, 786466, 65536, 1, 852002, 65536, 1, 917538, 196608, 1, 983074, 65536, 2, 786467, 65536, 1, 852003, 65536, 1, 917539, 196608, 1, 983075, 65536, 2, 786432, 65536, 1, 851968, 65536, 1, 917504, 196608, 1, 983040, 65536, 2, 786433, 65536, 1, 851969, 196608, 0, 917505, 65536, 1, 983041, 65536, 2, 786434, 196608, 1, 851970, 65536, 1, 917506, 65536, 1, 983042, 65536, 2, 786435, 65536, 1, 851971, 65536, 1, 917507, 65536, 1, 983043, 65536, 2, 786436, 65536, 1, 851972, 65536, 1, 917508, 196608, 1, 983044, 65536, 2, 786437, 65536, 1, 851973, 65536, 1, 917509, 65536, 1, 983045, 65536, 2, 786438, 65536, 1, 851974, 196608, 0, 917510, 65536, 1, 983046, 65536, 2, 786439, 196608, 0, 851975, 65536, 1, 917511, 65536, 1, 983047, 65536, 2, 786440, 65536, 1, 851976, 65536, 1, 917512, 196608, 0, 983048, 65536, 2, 786441, 196608, 0, 851977, 65536, 1, 917513, 65536, 1, 983049, 65536, 2, 786442, 65536, 1, 851978, 65536, 1, 917514, 65536, 1, 983050, 65536, 2, 786443, 65536, 1, 851979, 196608, 1, 917515, 65536, 1, 983051, 65536, 2, 786444, 65536, 1, 851980, 65536, 1, 917516, 65536, 1, 983052, 65536, 2, 786445, 65536, 1, 851981, 65536, 1, 917517, 65536, 1, 983053, 65536, 2, 786446, 196608, 1, 851982, 196608, 0, 917518, 65536, 1, 983054, 65536, 2, 786447, 196608, 1, 851983, 65536, 1, 917519, 65536, 1, 983055, 65536, 2, 786448, 65536, 1, 851984, 196608, 0, 917520, 65536, 1, 983056, 65536, 2, 786449, 65536, 1, 851985, 65536, 1, 917521, 65536, 1, 983057, 65536, 2, 786450, 65536, 1, 851986, 65536, 1, 917522, 65536, 1, 983058, 65536, 2, 786451, 65536, 1, 851987, 65536, 1, 917523, 65536, 1, 983059, 65536, 2, 720896, 65536, 0, 720897, 65536, 0, 720898, 65536, 0, 720899, 65536, 0, 720900, 65536, 0, 720901, 65536, 0, 720902, 65536, 0, 720903, 65536, 0, 720904, 65536, 0, 720905, 65536, 0, 720906, 65536, 0, 720907, 65536, 0, 720908, 65536, 0, 720909, 65536, 0, 720910, 65536, 0, 720911, 65536, 0, 720912, 65536, 0, 720913, 65536, 0, 720914, 65536, 0, 720915, 65536, 0, 720916, 65536, 0, 720917, 65536, 0, 720918, 65536, 0, 720919, 65536, 0, 720920, 65536, 0, 720921, 65536, 0, 720922, 65536, 0, 720923, 65536, 0, 720924, 65536, 0, 720925, 65536, 0, 720926, 65536, 0, 720927, 65536, 0, 720928, 65536, 0, 720929, 65536, 0, 720930, 65536, 0, 720931, 65536, 0, 851956, 65536, 1, 917492, 65536, 1, 983028, 65536, 1, 851957, 196608, 0, 917493, 196608, 1, 983029, 65536, 1, 851958, 65536, 1, 917494, 65536, 1, 983030, 65536, 1, 851959, 65536, 1, 917495, 65536, 1, 983031, 196608, 1, 851960, 65536, 1, 917496, 196608, 1, 983032, 65536, 1, 851961, 65536, 1, 917497, 65536, 1, 983033, 65536, 1, 851962, 196608, 0, 917498, 65536, 1, 983034, 65536, 1, 851963, 196608, 0, 917499, 65536, 1, 983035, 196608, 0, 851964, 65536, 1, 917500, 65536, 1, 983036, 65536, 1, 851965, 65536, 1, 917501, 65536, 1, 983037, 65536, 1, 851966, 65536, 1, 917502, 65536, 1, 983038, 65536, 1, 851967, 65536, 1, 917503, 65536, 1, 983039, 196608, 1, 786468, 65536, 1, 852004, 65536, 1, 917540, 65536, 1, 786469, 196608, 0, 852005, 65536, 1, 917541, 65536, 1, 786470, 65536, 1, 852006, 65536, 1, 917542, 65536, 1, 786471, 65536, 1, 852007, 196608, 0, 917543, 65536, 1, 786472, 65536, 1, 852008, 65536, 1, 917544, 65536, 1, 786473, 196608, 1, 852009, 196608, 0, 917545, 65536, 1, 786474, 65536, 1, 852010, 65536, 1, 917546, 65536, 1, 786475, 65536, 1, 852011, 196608, 0, 917547, 65536, 1, 786476, 65536, 1, 852012, 196608, 1, 917548, 65536, 1, 786477, 65536, 1, 852013, 65536, 1, 917549, 196608, 0, 786478, 65536, 1, 852014, 65536, 1, 917550, 65536, 1, 786479, 65536, 1, 852015, 65536, 1, 917551, 65536, 1, 720932, 65536, 0, 720933, 65536, 0, 720934, 65536, 0, 720935, 65536, 0, 720936, 65536, 0, 720937, 65536, 0, 720938, 65536, 0, 720939, 65536, 0, 720940, 65536, 0, 720941, 65536, 0, 720942, 65536, 0, 720943, 65536, 0, 786420, 65536, 0, 786421, 65536, 0, 786422, 65536, 0, 786423, 65536, 0, 786424, 65536, 0, 786425, 65536, 0, 786426, 65536, 0, 786427, 65536, 0, 786428, 65536, 0, 786429, 65536, 0, 786430, 65536, 0, 786431, 65536, 0, 1048564, 65536, 2, 1048565, 65536, 2, 1048566, 65536, 2, 1048567, 65536, 2, 1048568, 65536, 2, 1048569, 65536, 2, 1048570, 65536, 2, 1048571, 65536, 2, 1048572, 65536, 2, 1048573, 65536, 2, 1048574, 65536, 2, 1048575, 65536, 2, 983076, 65536, 2, 983077, 65536, 2, 983078, 65536, 2, 983079, 65536, 2, 983080, 65536, 2, 983081, 65536, 2, 983082, 65536, 2, 983083, 65536, 2, 983084, 65536, 2, 983085, 65536, 2, 983086, 65536, 2, 983087, 65536, 2)

[node name="EvilCloud" type="Sprite2D" parent="Background"]
position = Vector2(264, -13)
texture = ExtResource("16_c14sj")
offset = Vector2(-3, 127)

[node name="Line2D" type="Line2D" parent="Background/EvilCloud"]
texture_repeat = 2
position = Vector2(4, 98)
points = PackedVector2Array(-3.99994, -98, -4, -20)
width = 32.0
default_color = Color(0.639216, 0.635294, 0.603922, 1)
texture = ExtResource("17_v3jon")
texture_mode = 1

[node name="EvilCloud2" type="Sprite2D" parent="Background"]
position = Vector2(853, -55)
texture = ExtResource("16_c14sj")
offset = Vector2(-3, 125)

[node name="Line2D" type="Line2D" parent="Background/EvilCloud2"]
texture_repeat = 2
position = Vector2(4, 96)
points = PackedVector2Array(-3.99994, -98, -4, -20)
width = 32.0
default_color = Color(0.639216, 0.635294, 0.603922, 1)
texture = ExtResource("17_v3jon")
texture_mode = 1

[node name="Fans" type="Node2D" parent="Background"]

[node name="YamSheet" type="Sprite2D" parent="Background/Fans"]
position = Vector2(64, 528)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet2" type="Sprite2D" parent="Background/Fans"]
position = Vector2(80, 560)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet3" type="Sprite2D" parent="Background/Fans"]
position = Vector2(128, 528)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet4" type="Sprite2D" parent="Background/Fans"]
position = Vector2(168, 536)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet5" type="Sprite2D" parent="Background/Fans"]
position = Vector2(232, 528)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet6" type="Sprite2D" parent="Background/Fans"]
position = Vector2(288, 552)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet7" type="Sprite2D" parent="Background/Fans"]
position = Vector2(328, 536)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet8" type="Sprite2D" parent="Background/Fans"]
position = Vector2(416, 544)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet9" type="Sprite2D" parent="Background/Fans"]
position = Vector2(464, 536)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet10" type="Sprite2D" parent="Background/Fans"]
position = Vector2(544, 552)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet11" type="Sprite2D" parent="Background/Fans"]
position = Vector2(376, 536)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet12" type="Sprite2D" parent="Background/Fans"]
position = Vector2(513, 528)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet13" type="Sprite2D" parent="Background/Fans"]
position = Vector2(624, 536)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet14" type="Sprite2D" parent="Background/Fans"]
position = Vector2(568, 536)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet15" type="Sprite2D" parent="Background/Fans"]
position = Vector2(680, 528)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet16" type="Sprite2D" parent="Background/Fans"]
position = Vector2(728, 528)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet17" type="Sprite2D" parent="Background/Fans"]
position = Vector2(784, 536)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet18" type="Sprite2D" parent="Background/Fans"]
position = Vector2(824, 536)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet19" type="Sprite2D" parent="Background/Fans"]
position = Vector2(888, 544)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet20" type="Sprite2D" parent="Background/Fans"]
position = Vector2(944, 528)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet21" type="Sprite2D" parent="Background/Fans"]
position = Vector2(1008, 544)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet22" type="Sprite2D" parent="Background/Fans"]
position = Vector2(1040, 528)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet23" type="Sprite2D" parent="Background/Fans"]
position = Vector2(1087, 537)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet24" type="Sprite2D" parent="Background/Fans"]
position = Vector2(0, 568)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet25" type="Sprite2D" parent="Background/Fans"]
position = Vector2(48, 599)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet26" type="Sprite2D" parent="Background/Fans"]
position = Vector2(111.5, 574.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet27" type="Sprite2D" parent="Background/Fans"]
position = Vector2(151.5, 582.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet28" type="Sprite2D" parent="Background/Fans"]
position = Vector2(215.5, 574.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet29" type="Sprite2D" parent="Background/Fans"]
position = Vector2(271.5, 598.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet30" type="Sprite2D" parent="Background/Fans"]
position = Vector2(311.5, 582.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet31" type="Sprite2D" parent="Background/Fans"]
position = Vector2(399.5, 590.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet32" type="Sprite2D" parent="Background/Fans"]
position = Vector2(447.5, 582.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet33" type="Sprite2D" parent="Background/Fans"]
position = Vector2(527.5, 598.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet34" type="Sprite2D" parent="Background/Fans"]
position = Vector2(359.5, 582.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet35" type="Sprite2D" parent="Background/Fans"]
position = Vector2(496.5, 574.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet36" type="Sprite2D" parent="Background/Fans"]
position = Vector2(607.5, 582.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet37" type="Sprite2D" parent="Background/Fans"]
position = Vector2(551.5, 582.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet38" type="Sprite2D" parent="Background/Fans"]
position = Vector2(663.5, 574.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet39" type="Sprite2D" parent="Background/Fans"]
position = Vector2(711.5, 574.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet40" type="Sprite2D" parent="Background/Fans"]
position = Vector2(767.5, 582.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet41" type="Sprite2D" parent="Background/Fans"]
position = Vector2(815.5, 567.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet42" type="Sprite2D" parent="Background/Fans"]
position = Vector2(871.5, 590.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet43" type="Sprite2D" parent="Background/Fans"]
position = Vector2(927.5, 574.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet44" type="Sprite2D" parent="Background/Fans"]
position = Vector2(991.5, 590.5)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet45" type="Sprite2D" parent="Background/Fans"]
position = Vector2(1056, 592)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="YamSheet46" type="Sprite2D" parent="Background/Fans"]
position = Vector2(1112, 606)
texture = ExtResource("5_gh8rj")
hframes = 4
vframes = 4

[node name="Player" parent="." instance=ExtResource("5_n5yia")]
position = Vector2(576, 379)
scale = Vector2(2, 2)
script = ExtResource("6_ecoko")

[node name="Microphone" type="Sprite2D" parent="."]
position = Vector2(628, 387)
scale = Vector2(1.6, 1.6)
texture = ExtResource("9_h4ayj")

[node name="Guitar" type="Sprite2D" parent="."]
position = Vector2(593, 407)
rotation = 1.04147
texture = ExtResource("10_4l8db")

[node name="PressingBar" type="Area2D" parent="."]
position = Vector2(576, 250)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressingBar"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_tvhth")

[node name="Line2D" type="Line2D" parent="PressingBar"]
modulate = Color(1, 1, 1, 0.54902)
texture_repeat = 2
position = Vector2(-941.834, -282)
scale = Vector2(1.65884, 1)
points = PackedVector2Array(0, 280, 1150, 280)
width = 64.0
texture = ExtResource("6_msk2n")
texture_mode = 1

[node name="UpArrowPosition" type="Node2D" parent="."]
position = Vector2(288, -64)

[node name="LeftArrowPosition" type="Node2D" parent="."]
position = Vector2(480, -64)

[node name="DownArrowPosition" type="Node2D" parent="."]
position = Vector2(672, -64)

[node name="RightArrowPosition" type="Node2D" parent="."]
position = Vector2(864, -64)

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="BPMTimer" type="Timer" parent="."]
one_shot = true

[node name="Heart" type="Node2D" parent="."]
position = Vector2(576, 70)

[node name="Sprite2D" type="Sprite2D" parent="Heart"]
scale = Vector2(4.8, 4.8)
texture = ExtResource("13_yewnw")

[node name="Label" type="Label" parent="Heart"]
offset_left = -39.0
offset_top = -54.0
offset_right = 48.0
offset_bottom = 51.0
text = "3"
label_settings = SubResource("LabelSettings_gsd82")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Heart"]
libraries = {
"": SubResource("AnimationLibrary_hys1v")
}

[node name="Light" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.486275)
position = Vector2(582, 249)
scale = Vector2(1, 1.00391)
texture = ExtResource("15_nuuwx")

[node name="Buttons" parent="." instance=ExtResource("15_i6rfy")]

[connection signal="area_entered" from="PressingBar" to="." method="_on_pressing_bar_area_entered"]
[connection signal="area_exited" from="PressingBar" to="." method="_on_pressing_bar_area_exited"]
[connection signal="timeout" from="BPMTimer" to="." method="_on_bpm_timer_timeout"]
